k8s/components/analytics/metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    role: metabase
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      role: metabase
  template:
    metadata:
      labels:
        role: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:v0.44.4
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "2"
              memory: "1G"
            requests:
              cpu: "2"
              memory: "1G"
